# VaporCore

./: .cursorignore  .gitignore  CMakeLists.txt  README.md  build.bat  vaporcore.example.ini
.cursor/rules/: steam-api-rules.mdc
include/: isteamapplist.h  isteamapps.h  isteamapps001.h  isteamapps002.h  isteamapps003.h  isteamapps004.h  isteamapps005.h  isteamapps006.h  isteamappticket.h  isteamclient.h  isteamclient007.h  isteamclient008.h  isteamclient009.h  isteamclient010.h  isteamclient011.h  isteamclient012.h  isteamclient014.h  isteamclient015.h  isteamclient016.h  isteamcontroller.h  isteamcontroller001.h  isteamfriends.h  isteamfriends003.h  isteamfriends004.h  isteamfriends005.h  isteamfriends006.h  isteamfriends007.h  isteamfriends008.h  isteamfriends009.h  isteamfriends011.h  isteamfriends013.h  isteamfriends014.h  isteamgameserver.h  isteamgameserver004.h  isteamgameserver005.h  isteamgameserver008.h  isteamgameserver009.h  isteamgameserver010.h  isteamgameserver011.h  isteamgameserverstats.h  (+105 more)
include/sdk/: isteamapps.h  isteamclient.h  isteamfriends.h  isteamfriends003.h  isteamfriends005.h  isteamgamecoordinator.h  isteamgameserver.h  isteamgameserver004.h  isteamgameserverstats.h  isteammatchmaking.h  isteammatchmaking002.h  isteammatchmaking006.h  isteammatchmaking007.h  isteamnetworking.h  isteamremotestorage.h  isteamuser.h  isteamuser009.h  isteamuser011.h  isteamuser012.h  isteamuserstats.h  isteamuserstats003.h  isteamuserstats004.h  isteamuserstats005.h  isteamuserstats006.h  isteamutils.h  isteamutils004.h  matchmakingtypes.h  steam_api.h  steam_gameserver.h  steamclientpublic.h  steamtypes.h
include/sdk/100/: isteamapps.h
include/sdk/134/: isteamhtmlsurface.h
include/steam/: isteamapplist.h  isteamapps.h  isteamapps002.h  isteamapps003.h  isteamapps005.h  isteamapps007.h  isteamclient.h  isteamclient007.h  isteamclient008.h  isteamclient011.h  isteamclient014.h  isteamclient015.h  isteamclient016.h  isteamclient017.h  isteamclient018.h  isteamclient019.h  isteamcontroller.h  isteamcontroller003.h  isteamcontroller004.h  isteamcontroller005.h  isteamcontroller006.h  isteamfriends.h  isteamfriends004.h  isteamfriends005.h  isteamfriends009.h  isteamfriends013.h  isteamfriends015.h  isteamgamecoordinator.h  isteamgameserver.h  isteamgameserver005.h  isteamgameserver008.h  isteamgameserver009.h  isteamgameserver010.h  isteamgameserver011.h  isteamgameserver012.h  isteamgameserverstats.h  isteamhtmlsurface.h  isteamhtmlsurface002.h  isteamhtmlsurface003.h  isteamhtmlsurface004.h  (+79 more)
resources/: version.rc
script/: generate_flat_api.py  header_stripper.py  interface_generator.py
scripts/: generate_flat_api.py  header_stripper.py  interface_generator.py
src/: CMakeLists.txt  logger.cpp  logger.h  steam_api.cpp  steam_api_flat.cpp  steam_api_internal.cpp  steam_app_list.cpp  steam_app_list.h  steam_app_ticket.cpp  steam_app_ticket.h  steam_apps.cpp  steam_apps.h  steam_client.cpp  steam_client.h  steam_controller.cpp  steam_controller.h  steam_encrypted_app_ticket.cpp  steam_friends.cpp  steam_friends.h  steam_game_coordinator.cpp  steam_game_server.cpp  steam_game_server.h  steam_game_server_stats.cpp  steam_game_server_stats.h  steam_game_stats.cpp  steam_gameserver.cpp  steam_html_surface.cpp  steam_html_surface.h  steam_http.cpp  steam_http.h  steam_inventory.cpp  steam_inventory.h  steam_master_server_updater.cpp  steam_master_server_updater.h  steam_matchmaking.cpp  steam_matchmaking.h  steam_music.cpp  steam_music_remote.cpp  steam_networking.cpp  steam_networking.h  (+22 more)
src/steam/: steam_api.cpp  steam_api_common.cpp  steam_api_flat.cpp  steam_api_internal.cpp  steam_app_list.cpp  steam_app_ticket.cpp  steam_apps.cpp  steam_callback_mgr.cpp  steam_client.cpp  steam_controller.cpp  steam_encrypted_app_ticket.cpp  steam_friends.cpp  steam_game_coordinator.cpp  steam_game_server.cpp  steam_game_server_stats.cpp  steam_game_stats.cpp  steam_gameserver.cpp  steam_html_surface.cpp  steam_http.cpp  steam_input.cpp  steam_inventory.cpp  steam_master_server_updater.cpp  steam_matchmaking.cpp  steam_music.cpp  steam_music_remote.cpp  steam_networking.cpp  steam_networking_sockets.cpp  steam_networking_utils.cpp  steam_parental_settings.cpp  steam_remote_play.cpp  steam_remote_storage.cpp  steam_screenshots.cpp  steam_tv.cpp  steam_ugc.cpp  steam_unified_messages.cpp  steam_user.cpp  steam_user_stats.cpp  steam_utils.cpp  steam_video.cpp
src/vapor/: vapor_config.cpp  vapor_file_storage.cpp  vapor_logger.cpp
